# automatic-inspection-agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml.example  pyproject.toml
agent/: __init__.py  brand.py  launcher.py  local_files.py  main.py  models.py  paths.py  settings.py
agent/config_mgr/: hosts.py  setup.py
agent/desktop/: app.py  assets.py  async_call.py  constants.py  formatters.py  icon_raster.py  main_window.py  markdown_render.py  setup_wizard.py  styles.qss  theme.py
agent/discovery/: compose.py  docker.py  java.py  middleware.py  orchestrator.py  static_java.py
agent/executor/: base.py  collect_policy.py  command_policy.py  java_probe.py  middleware_probe.py  ssh.py  systemd_probe.py  write_policy.py
agent/feishu/: bitable_client.py  bot_service.py  client.py  doc_client.py  message_parser.py  notifier.py  publisher.py  runner.py
agent/incident/: rules.py
agent/langchain/: chat_graph.py  checkpointer.py  context_budget.py  context_builder.py  context_compactor.py  context_limits.py  context_messages.py  context_policy.py  conversation_summarizer.py  llm_factory.py  memory_extractor.py  session_context.py  thread_messages.py  token_meter.py  tool_compress.py  (+1 more)
docs/: agent-capability-review.md  context-management.md  feishu-bot-setup.md  host-metrics-panel-plan.md  ops-report-workflow.md
installers/: README.txt
scripts/: build.ps1  make_icon.py
tests/: test_command_policy.py  test_feishu.py  test_hosts.py  test_java_probe.py  test_middleware_probe.py  test_resolve_host.py  test_rules.py  test_setup.py  test_ssh_elevation.py
(+79 files in other folders)
