[project]
name = "automatic-inspection-agent"
version = "0.1.0"
description = "Project-level service inspection AI agent (Windows jumpbox + SSH Linux)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "asyncssh>=2.17.0",
    "psutil>=6.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "ruamel.yaml>=0.18.0",
    "aiosqlite>=0.20.0",
    "langchain>=0.3.20",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.20",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-ollama>=0.3.0",
    "lark-oapi>=1.4.0",
    "PySide6>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
build = [
    "pyinstaller>=6.11.0",
    "pillow>=11.0.0",
]

[project.scripts]
inspection-agent = "agent.main:main"
inspection-agent-app = "agent.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.hatch.build.targets.wheel.force-include]
"agent/desktop/assets" = "agent/desktop/assets"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
